[metadata]
name = signal-sticker-tool
version = 0.2.0
url = https://github.com/ittner/signal-sticker-tool/
license = GPLv3
author = Alexandre Erwin Ittner
author_email = alexandre@ittner.com.br
description = Create and upload Signal sticker packs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Operating System :: POSIX :: Linux
    Operating System :: POSIX
    Operating System :: Unix
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Topic :: Communications
    Topic :: Communications :: Chat
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = find:
zip_safe = true
scripts = signal-sticker-tool
install_requires =
    signalstickers-client >= 3.0.0
    pyyaml >= 5.4
    pyxdg >= 0.27
